--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -201,6 +201,9 @@
   <data name="ipaddress" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ipaddress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_pelindo_gray.jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_pelindo_gray.jpg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="database" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\database.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -227,7 +230,7 @@
   <data name="Icon_pc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon_pc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo_pelindo_gray.jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo_pelindo_gray.jpg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="main-header2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\main-header.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
