--- a/BNITapCash/Properties/Resources.resx
+++ b/BNITapCash/Properties/Resources.resx
@@ -134,8 +134,8 @@
     <value>/ws/parking_outs/request_uid_fare</value>
     <comment>API for Request Data Parking In by UID card</comment>
   </data>
-  <data name="pelindo4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\pelindo4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BG PUTIH" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG PUTIH.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="main-footer1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main-footer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -143,9 +143,24 @@
   <data name="SettlementPathFromWindows" xml:space="preserve">
     <value>\Public</value>
   </data>
+  <data name="back button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\back button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="VersionApp" xml:space="preserve">
     <value>1.0.1</value>
     <comment>version of E-Payment Software</comment>
+  </data>
+  <data name="print report" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\print report.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="version" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\version.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WP DISPENSER2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WP DISPENSER2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Group 3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Group 3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="tid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tid.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -162,8 +177,15 @@
   <data name="main-footer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main-footer.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="version" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\version.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="id" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\id.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="RequestVehicleTypeAPIURL" xml:space="preserve">
+    <value>/ws/vehicle_types/get_all_vehicle_name</value>
+    <comment>API for request data vehicle type</comment>
+  </data>
+  <data name="reprint button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reprint button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="LoginAPIURL" xml:space="preserve">
     <value>/ws/accounts/login_api</value>
@@ -179,12 +201,26 @@
     <value>https://takeruadelbert.github.io/</value>
     <comment>how to get in touch with the developer of E-Payment Software</comment>
   </data>
-  <data name="repo" xml:space="preserve">
-    <value>/epass2018</value>
-    <comment>repository of the server</comment>
+  <data name="main-header2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\main-header.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="id" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\id.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="minimize button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\minimize button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BG BIRU" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG BIRU.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pelindo4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pelindo4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="WP DISPENSER" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\WP DISPENSER.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="close button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\close button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="BG PUTIH2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG PUTIH2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="host" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\host.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -195,14 +231,20 @@
   <data name="main-header1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\main-header.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="webcam" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\webcam.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="BG PUTIH21" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BG PUTIH2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="missing ticket button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\missing ticket button.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ipaddress" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ipaddress.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="logo_pelindo_gray.jpg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo_pelindo_gray.jpg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="webcam" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\webcam.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="database" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\database.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -213,9 +255,9 @@
   <data name="mid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mid.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="RequestVehicleTypeAPIURL" xml:space="preserve">
-    <value>/ws/vehicle_types/get_all_vehicle_name</value>
-    <comment>API for request data vehicle type</comment>
+  <data name="repo" xml:space="preserve">
+    <value>/epass2018</value>
+    <comment>repository of the server</comment>
   </data>
   <data name="pelindo4_logoonly" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pelindo4_logoonly.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -230,7 +272,7 @@
   <data name="Icon_pc" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icon_pc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="main-header2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\main-header.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icon setting" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon setting.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
